--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
             <li><span class="bold">10:40 a.m. – 11:00 a.m.</span> — <em>"Running Energy-Efficient HPL on APUs: Strategies and Best Practices"</em> — Jean-Yves Vet and Gabriel Hautreux</li>
 						 <p><em>Institutions: [1] HPE [2] CINES </em></p>
             <li><span class="bold">11:00 a.m. – 11:30 a.m.</span> — Coffee Break</li>
+						 <p><em></em></p>		
             <li><span class="bold">11:30 a.m. – 11:50 a.m.</span> — <em>"DARE-ML: Democratized Accessible Resource Environment for Machine Learning in the SUPERCOM platform"</em> — Matteo Mendula, Caterina Leonelli, Marco Miozzo, and Paolo Dini</li>
 				 <p><em>Institutions: [1] Centre Tecnològic de Telecomunicacions de Catalunya (CTTC) [2] University of Bologna</em> </p>
 		<p><a href="assets/DARE-MLv2.pdf">[Presentation slides]</a></p>
@@ -161,7 +162,7 @@
                     			</td>
                     		</tr>
                     	</table>
-                    	<p><strong style="color: #222;">Future HPC Architectural Trends for Tackling AI's Hyper-Exponential Energy Crisis</strong></p>
+                    	<p><strong style="color: #222;">Codesign for Energy Efficient Computing</strong></p>
 			<p><strong>Abstract</strong> The rapid growth of AI is driving a hyper-exponential increase in computing demand, with processing needs doubling every three months instead of every two years, far outpacing traditional advancements in energy efficiency. Moore’s Law stagnated in 2005 with the end of Dennard scaling, halting the ability to reduce energy consumption per transistor. Meanwhile, power-hungry GPUs continue to dominate data centers, contributing to an emerging energy crisis. AI’s power consumption is on track to surpass global energy production within a decade. This talk will explore AI's role in this crisis and the shift from general-purpose processors to specialized architectures, including chiplet-based designs, domain-specific accelerators, advanced packaging techniques, and co-integrated systems that combine leading-edge and legacy technologies. These innovations aim to improve energy efficiency and balance performance needs with sustainability in a resource-constrained environment. The talk will provide insights into how HPC can adapt to these industry-wide changes and thrive in a rapidly evolving technological landscape.</p> 
 			
 			<p><strong>BIO</strong> John Shalf is Department Head for Computer Science in the Applied Mathematics and Computational Science Research Division at Lawrence Berkeley National Laboratory (LBNL). He is a coauthor of over 90 publications in the field of parallel computing software and HPC technology, including three best papers and the widely cited report “The Landscape of Parallel Computing Research: A View from Berkeley” (with David Patterson and others). He also coauthored “ExaScale Software Study: Software Challenges in Extreme Scale Systems,” which sets the Defense Advanced Research Project Agency’s (DARPA’s) information technology research investment strategy for the next decade. He was a member of the Berkeley Lab/NERSC team that won a 2002 R&D 100 Award for the RAGE robot. Before joining Berkeley Lab in 2000, Shalf was a research programmer at the National Center for Supercomputing Applications at the University of Illinois and a visiting scientist at the Max-Planck-Institut für Gravitationphysick/Albert Einstein Institute in Potsdam, Germany, where he co-developed the Cactus code framework for computational astrophysics.</p>
@@ -248,13 +249,13 @@
                 <section id="announcements">
                     <h2>Announcements</h2>
 		<hr>
-			<h3>Workshop is happening now in Hall X3 - 1st floor</h3>
+			<h3> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/planning/UGxhbm5pbmdfMjU4MTc2OA=="> Workshop</a> is happening now in Hall X3 - 1st floor!</h3>
 			
                     <hr>
 <h3>Workshop Program is Updated!</h3>
 <p>
     John Shalf from Lawrence Berkeley National Laboratory (LBNL) will give the keynote speech on 
-    <em>"Future HPC Architectural Trends for Tackling AI's Hyper-Exponential Energy Crisis"</em>. 
+    <em>"Codesign for Energy Efficient Computing"</em>. 
     Eight papers are accepted after rigorous reviews from our program committee members, with one best paper.
 </p>
 <p>
