--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
         <p><span style="color: #005f73;"> <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzNjM=" target="_blank">Session chair: Ayesha Afzal - Erlangen National High Performance Computing Center (NHR@FAU), Geramny</a></span></p>
         <ul>
             <li><span class="bold">9:05 a.m. – 9:40 a.m.</span> — Keynote speech with Q&A, <em>"Codesign for Energy Efficient Computing"</em> by <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzMDk=" target="_blank">John Shalf</a>; visit <a href="index.html#program">here</a> for more information.</li>
+	
 		<p><em>Institution: Lawrence Berkeley National Laboratory (LBNL)</em></p>
 		<p><a href="assets/EnergyEffficientComputing-ISC-EEHPC-2025.pdf">[Presentation slides]</a></p>
-            <li><span class="bold">9:40 a.m. – 10:00 a.m.</span> — Best Paper talk with Q&A, <em>"What A Waste"</em> by Shaina Smith, Jordan M. Abt, and Ryan E. Grant</li>
+            <li><span class="bold">9:40 a.m. – 10:00 a.m.</span> — Best Paper talk with Q&A, <em>"What A Waste"</em> </li>
+								<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzkxMTk1MDk=" target="_blank"> Shaina Smith</a>, Jordan M. Abt, and Ryan E. Grant </p>
 		 <p><em>Institution: Queen's university</em></p>
 					    <p><a href="assets/ISCPaperPresentation.pdf">[Presentation slides]</a></p>
         </ul>
@@ -108,10 +110,12 @@
         <h3>🟩 Session 2: Energy-Efficient GPU Computing</h3> 
         <p><span style="color: #005f73;"> <a href="https://app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzgzMzY2MDI=" target="_blank">Session chair: Zhengji Zhao - Lawrence Berkeley National Laboratory (NERSC), USA</a></span></p>
         <ul>
-            <li><span class="bold">10:00 a.m. – 10:20 a.m.</span> — <em>"Experience on clock rate adjustment for energy-efficient GPU-accelerated real-world codes"</em> — Giorgio Amati, Matteo Turisini, Andrea Monterubbiano, Mattia Paladino, Elisabetta Boella, Daniele Gregori, and Danilo Croce</li>
+            <li><span class="bold">10:00 a.m. – 10:20 a.m.</span> — <em>"Experience on clock rate adjustment for energy-efficient GPU-accelerated real-world codes"</em> </li>
+						<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzkxMDY2NTk=" target="_blank"> Giorgio Amati</a>, Matteo Turisini, Andrea Monterubbiano, Mattia Paladino, Elisabetta Boella, Daniele Gregori, and Danilo Croce </p>
 				 <p><em>Institutions: [1] CINECA, Rome, Italy [2] E4 Computer Engineering SpA, Scandiano, Italy [3] Tor Vergata University, Rome, Italy </em> </p>
 		<p><a href="assets/EESP2025-Amati.pdf">[Presentation slides]</a></p>
-            <li><span class="bold">10:20 a.m. – 10:40 a.m.</span> — <em>"Characterizing GPU Energy Usage in Exascale-Ready Portable Science Applications"</em> — William Godoy, Oscar Hernandez, Paul Kent, Maria Patrou, Kazi Asifuzzaman, Narasinga Miniskar, Pedro Valero-Lara, Jeffrey Vetter, Matthew Sinclair, Jason Lowe-Power, and Bobby Bruce</li>
+            <li><span class="bold">10:20 a.m. – 10:40 a.m.</span> — <em>"Characterizing GPU Energy Usage in Exascale-Ready Portable Science Applications"</em> </li>
+						<p>Authors: William Godoy, Oscar Hernandez, Paul Kent, <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzk3MTE1OTE=" target="_blank"> Maria Patrou</a>, Kazi Asifuzzaman, Narasinga Miniskar, Pedro Valero-Lara, Jeffrey Vetter, Matthew Sinclair, Jason Lowe-Power, and Bobby Bruce </p>
 				 <p><em>Institutions: [1] Oak Ridge National Laboratory, Oak Ridge, Tennessee, USA [2] University of Wisconsin-Madison, Madison, Wisconsin, USA [3] University of California Davis, Davis, California, USA </em> </p>
 		<p><a href="assets/ISC25-EESP-GPU-Energy-Apps_final.pdf">[Presentation slides]</a></p>
         </ul>
@@ -121,11 +125,13 @@
         <h3>🟨 Session 3: System-Level Strategies for Energy-Efficient Computing</h3>
         <p><span style="color: #005f73;"> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzMTQ=" target="_blank"> Session chair: Hatem Ltaief - King Abdullah University of Science and Technology, Saudi Arabia</a></span></p>
         <ul>
-            <li><span class="bold">10:40 a.m. – 11:00 a.m.</span> — <em>"Running Energy-Efficient HPL on APUs: Strategies and Best Practices"</em> — Jean-Yves Vet and Gabriel Hautreux</li>
+            <li><span class="bold">10:40 a.m. – 11:00 a.m.</span> — <em>"Running Energy-Efficient HPL on APUs: Strategies and Best Practices"</em> </li>
+				<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzgwMTgwNTI=" target="_blank"> Jean-Yves Vet</a> and Gabriel Hautreux </p>
 						 <p><em>Institutions: [1] HPE [2] CINES </em></p>
             <li><span class="bold">11:00 a.m. – 11:30 a.m.</span> — Coffee Break</li>
 						 <p><em></em></p>		
-            <li><span class="bold">11:30 a.m. – 11:50 a.m.</span> — <em>"DARE-ML: Democratized Accessible Resource Environment for Machine Learning in the SUPERCOM platform"</em> — Matteo Mendula, Caterina Leonelli, Marco Miozzo, and Paolo Dini</li>
+            <li><span class="bold">11:30 a.m. – 11:50 a.m.</span> — <em>"DARE-ML: Democratized Accessible Resource Environment for Machine Learning in the SUPERCOM platform"</em> </li>
+		<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzk3MTE1OTA=" target="_blank"> Matteo Mendula</a>, Caterina Leonelli, Marco Miozzo, and Paolo Dini </p>
 				 <p><em>Institutions: [1] Centre Tecnològic de Telecomunicacions de Catalunya (CTTC) [2] University of Bologna</em> </p>
 		<p><a href="assets/DARE-MLv2.pdf">[Presentation slides]</a></p>
         </ul>
@@ -135,10 +141,12 @@
         <h3>🟧 Session 4: Power Profiling and Energy Tuning Techniques</h3>
         <p><span style="color: #005f73;"> <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzc5MzAzNTQ=" target="_blank">Session chair: Fumiyoshi Shoji - RIKEN Center for Computational Science (R-CCS), Japan</a></span></p>
         <ul>
-            <li><span class="bold">11:50 a.m. – 12:10 p.m.</span> — <em>"Pinpointing Idle-Power Regressions in Linux"</em> — Hannes Tröpgen, Till Smejkal, Thomas Ilsche, Robert Schöne, and Horst Schirmeier</li>
+            <li><span class="bold">11:50 a.m. – 12:10 p.m.</span> — <em>"Pinpointing Idle-Power Regressions in Linux"</em> </li>
+							<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzkzNjY4MDc=" target="_blank"> Hannes Tröpgen</a>, Till Smejkal, Thomas Ilsche, Robert Schöne, and Horst Schirmeier </p>
 					 <p><em>Institutions: [1] ZIH, CIDS, TU Dresden [2] Chair of Operating Systems, Faculty of CS, TU Dresden </em></p>
-																	    <p><a href="assets/presentation_eesp_linux_bisection.pdf">[Presentation slides]</a></p>
-            <li><span class="bold">12:10 p.m. – 12:30 p.m.</span> — <em>"Power-Capping Metric Evaluation for Improving Energy Efficiency in HPC Applications"</em> — Maria Patrou, Thomas Wang, Wael Elwasif, Markus Eisenbach, Ross Miller, Oscar Hernandez, and William Godoy</li>
+					 <p><a href="assets/presentation_eesp_linux_bisection.pdf">[Presentation slides]</a></p>
+            <li><span class="bold">12:10 p.m. – 12:30 p.m.</span> — <em>"Power-Capping Metric Evaluation for Improving Energy Efficiency in HPC Applications"</em> </li>
+					<p>Authors: <a href="https://isc.app.swapcard.com/event/isc-high-performance-2025/person/RXZlbnRQZW9wbGVfMzk3MTE1OTE=" target="_blank"> Maria Patrou</a>, Thomas Wang, Wael Elwasif, Markus Eisenbach, Ross Miller, Oscar Hernandez, and William Godoy </p>
 					 <p><em>Institutions: [1] Oak Ridge National Laboratory, Oak Ridge, Tennessee, USA [2] Camas High School, Camas, Washington, USA </em></p>
 		<p><a href="assets/Power_Capping_EESP25_final.pdf">[Presentation slides]</a></p>
             <li><span class="bold">12:30 p.m. – 12:50 p.m.</span> — <em>"Analysis of Application Power Characteristics Using Performance Counters on A64FX"</em> </li>
